<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VotingServer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_b">Start Server</string>
    <string name="stop_b">Stop Server</string>
    <string name="clear_b">Clear Votes</string>
    <string name="incoming_tv">Incoming Votes</string>
    <string name="chart_b">View Chart</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="setup_candidate_tv">Candidate ID:</string>
    <string name="title_activity_chart">View Chart</string>
    <string name="candidate_list">List of Candidates</string>
    <string name="candidate_t">Candidate ID:</string>
    <string name="votes_t">Number of Votes:</string>
    <string name="dup_b">Duplicate Toggle</string>
    <string name="clearm_b">Clear Monitor</string>
    <string name="addc_b">Add Candidate</string>
    <string name="remc_b">Remove Candidate</string>
    <string name="sortid_b">Sort By Candidate</string>
    <string name="sortv_b">Sort By Votes</string>
    <string name="number_t"/>
    <string name="num_cand"/>
    <string name="num_vote"/>
    <string name="filter_name">com.example.votingserver</string>
    <string name="clearB">Clear Votes</string>

</resources>
